--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,6 +3,7 @@
     font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
+    height:100%;
 }
 body {
     -webkit-font-smoothing: antialiased;
