--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,6 +1,6 @@
 .app {
     display: flex;
-    justify-contents: center;
+    justify-content: center;
     /* border: 1px solid white; */
     margin: 0 auto;
     max-width: 1440px;
