--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -7,13 +7,60 @@ $normal-text: 20px;
 $standard-margin: 50px;
 
 #nav {
+    display: inline-block;
     position: sticky;
     top: 0;
-    width: auto;
+    width: 87%;
     height: 500px;
     margin: 0 20px;
     background-color: #141321;
     border-radius: 20px;
+    #nav-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        height: 420px;
+        margin: 40px 40px;
+        img {
+            width: 90px;
+            border-radius: 100%;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 20px;
+            margin-bottom: 3px;
+        }
+
+        a {
+            font-size: 15px;
+            color: white;
+            text-decoration: none;
+            &:hover {
+                color: $rose-madder;
+            }
+        }
+
+        #social-links-container {
+            display: flex;
+            width: fit-content;
+            height: fit-content;
+            justify-content: start;
+            align-items: center;
+            img {
+                height: 25px;
+                width: 25px;
+                border-radius: 0;
+                margin-top: 15px;
+                margin-bottom: 5px;
+                margin-right: 15px;
+                &#github-icon {
+                    margin-top: 18px;
+                }
+            }
+        }
+    }
 }
 
 .grid-item {
@@ -23,7 +70,7 @@ $standard-margin: 50px;
 }
 
 
-//HOME PAGE DIVS
+//HOME PAGE DIVS 
 #intro {
     grid-area: intro;
     #intro-wrapper {
