--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     /* border: 1px solid white; */
     margin: 0 auto;
+    min-width: 1024px;
     max-width: 1440px;
     height: auto;
     
