added responsive design to about component (not configured perfectly for mobile yet though)

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -300,14 +300,23 @@ $medium-margin: 45px;
         align-items: center;
         margin: $medium-margin $standard-margin;
         height: auto;
-        /* border: 1px solid blue; */
+        // border: 1px solid blue;
+        @media (max-width: 1440px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+
+        }
         #about-content {
             display: flex;
             flex-direction: column;
             align-items: start;
             justify-content: start;
-            /* border: 1px solid blue; */
+            // border: 1px solid red;
             max-width: 650px;
+            @media (max-width: 1440px) {
+                max-width: 100%;
+            }
             h3 {
                 font-size: $medium-header;
                 margin-bottom: 20px;
@@ -319,14 +328,24 @@ $medium-margin: 45px;
                 margin-bottom: 20px;
                 line-height: 160%;
             }
+            a {
+                @media (max-width: 1440px) {
+                    align-self: center;
+                }
+            }
         }
     
         #about-image {
             margin-left: 50px;
-            /* border: 1px solid red; */
+            border: 1px solid pink;
             img {
                 width: 300px;
                 border-radius: 20px
+            }
+            @media (max-width: 1440px) {
+                align-self: center;
+                margin-left: 0px;
+                margin-top: 30px;
             }
             
         }
