forgot to remove pink border around about image

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -337,7 +337,7 @@ $medium-margin: 45px;
     
         #about-image {
             margin-left: 50px;
-            border: 1px solid pink;
+            // border: 1px solid pink;
             img {
                 width: 300px;
                 border-radius: 20px
