small style changes, starting work on mobile nav

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,3 +1,7 @@
+$rose-madder: #DA2F3A;
+$xiketic-dark: #020013;
+$xiketic-light: #141321;
+$opaquewhite: rgba(255, 255, 255, 0.3);
 .app {
     display: flex;
     flex-direction: column;
