--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,7 @@
+$rose-madder: #DA2F3A;
+$xiketic-dark: #020013;
+$xiketic-light: #141321;
+$opaquewhite: rgba(255, 255, 255, 0.3);
 * {
     color: white;
     font-family: "Inter", sans-serif;
@@ -10,8 +14,7 @@ html {
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color:#020013;
-    
+    background-color: $xiketic-dark;
 }
   
 code {
@@ -23,4 +26,12 @@ code {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.displayBlock {
+    display: block;
+}
+
+.displayNone {
+    display: none;
 }
