--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -100,6 +100,22 @@ $medium-margin: 45px;
     }
 }
 
+#hamburgerMenu {
+    display: none;
+    @media (max-width: 1024px) {
+        display: block;
+        position: fixed;
+        top: 75px;
+        left: 50px;
+    }
+    background-color: transparent;
+    border: none;
+    img {
+        width: 75px;
+        height: 75px;
+    }
+}
+
 #footer {
     display: flex;
     flex-direction: column;
