--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -22,9 +22,13 @@ $medium-margin: 45px;
     margin-right: 15px;
     background-color: $xiketic-light;
     border-radius: 20px;
+    // filter: none;
+    // z-index: 2;
     @media (max-width: 1024px) {
-        position: absolute;
         display: none;
+        position: fixed;
+        margin-top: 30px;
+        background-color: $rose-madder;
     }
     #nav-wrapper {
         display: flex;
@@ -50,6 +54,12 @@ $medium-margin: 45px;
             text-decoration: none;
             &:hover {
                 color: $rose-madder;
+            }
+            @media (max-width: 1024px) {
+                color: white;
+                &:hover {
+                    color: white;
+                }
             }
         }
 
@@ -91,6 +101,11 @@ $medium-margin: 45px;
                 a:hover {
                     color: $rose-madder;
                 }
+                @media (max-width: 1024px) {
+                    a:hover {
+                        color: black;
+                    }
+                }
             }
 
             .nav-link:last-child {
@@ -100,19 +115,26 @@ $medium-margin: 45px;
     }
 }
 
-#hamburgerMenu {
+#hamburgerMenu{
     display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    height: 70px;
+    width: 70px;
+    margin-left: -30px;
+    background-color: $rose-madder;
+    border-radius: 20px;
+    border: 1px solid black;
     @media (max-width: 1024px) {
-        display: block;
-        position: fixed;
-        top: 75px;
-        left: 50px;
+        display: flex;
     }
-    background-color: transparent;
-    border: none;
-    img {
-        width: 75px;
-        height: 75px;
+    #hamburgerIcon {
+        width: 60%;
+    }
+    #closeIcon {
+        display: none;
+        width: 60%;
     }
 }
 
