--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -30,12 +30,10 @@ $opaquewhite: rgba(255, 255, 255, 0.3);
     margin-bottom: 30px;
 }
 
-
-
 //PAGES LAYOUT HERE
 .homepage-container {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 48.5% 48.5%;
     grid-template-rows: 400px auto auto auto 500px;
     grid-template-areas: 
         'intro intro'
@@ -46,7 +44,7 @@ $opaquewhite: rgba(255, 255, 255, 0.3);
     row-gap: 15px;
     column-gap: 15px;
     width: 78%;
-    /* border: 1px solid cyan; */
+    // border: 1px solid cyan;
     margin-top: 30px;
     margin-bottom: 30px;
 }
