finished mobile responsiveness!

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -145,10 +145,10 @@ $medium-margin: 45px;
     align-items: center;
     height: 200px;
     margin-top: 60px;
-    padding: 0;
+    padding: 0 10px;
     width: 100%;
     background-color: $xiketic-light;
-    
+    text-align: center;
     p {
         color: rgb(128, 127, 127);
         margin-bottom: 10px;
@@ -180,11 +180,19 @@ $medium-margin: 45px;
         align-items: center;
         // border: 1px solid green;
         margin: $standard-margin $standard-margin;
+        @media (max-width: 768px) {
+            flex-direction: column;
+            justify-content: center;
+        }
         #intro-text {
             display: flex;
             flex-direction: column;
             align-items: start;
             justify-content: center;
+            @media (max-width: 768px) {
+                text-align: center;
+                align-items: center;
+            }
             // border: 1px solid blue;
             max-width: 500px;
             h3 {
@@ -211,6 +219,9 @@ $medium-margin: 45px;
                 }
                 @media (max-width: 1024px) {
                     width: 250px;
+                }
+                @media (max-width: 768px) {
+                    margin-top: 30px;
                 }
             }
             
@@ -245,6 +256,9 @@ $medium-margin: 45px;
             grid-gap: 15px;
             @media (max-width: 1024px) {
                 grid-template-columns: 1fr 1fr;
+            }
+            @media (max-width: 768px) {
+                grid-template-columns: 1fr;
             }
             .project-card {
                 /* background-color: $rose-madder; */
@@ -392,7 +406,13 @@ $medium-margin: 45px;
             // border: 1px solid pink;
             img {
                 width: 300px;
-                border-radius: 20px
+                border-radius: 20px;
+                @media (max-width: 768px) {
+                    width: 200px;
+                }
+                @media (max-width: 475px) {
+                    width: 150px;
+                }
             }
             @media (max-width: 1440px) {
                 align-self: center;
