temporary fix for not having projects, will add back in later! removed contacts as well. Portfolio is now useable and ready for full use.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -34,7 +34,7 @@ $opaquewhite: rgba(255, 255, 255, 0.3);
 .homepage-container {
     display: grid;
     grid-template-columns: 48.5% 48.5%;
-    grid-template-rows: 400px auto auto auto 500px;
+    grid-template-rows: 400px auto auto auto;
     grid-template-areas: 
         'intro intro'
         'portfolio portfolio'
@@ -43,7 +43,7 @@ $opaquewhite: rgba(255, 255, 255, 0.3);
         'contact contact';
     @media (max-width: 768px) {
         grid-template-columns: 98%;
-        grid-template-rows: auto auto auto auto auto 500px;
+        grid-template-rows: auto auto auto auto auto;
         grid-template-areas: 
         'intro'
         'portfolio'
